HelloUltraviolet/Fixtures/RejectedSource/Keys/EscapingClosureSharedLifetime/Expected.uv
//! Expected diagnostic metadata for the EscapingClosureSharedLifetime rejected-source specimen.

expectedDiagnostic("E-CON-0086", "requirement.19.EscapingClosureSharedLifetime")
